--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Your awesome title
+title: Bruce Qi
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: Bruce Qi
+  email: bruce.zhiqi@gmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
